# rotatory

./: Cargo.toml  Justfile  rust-toolchain.toml  rustfmt.toml
.github/workflows/: rust_build.yaml
src/: asynchronous.rs  backoff.rs  error.rs  lib.rs  synchronous.rs
src/backoff/: constant.rs  exponential.rs  iterator.rs  linear.rs  max_attempts.rs  max_delay.rs  mod.rs
tests/: asynchronous.rs  synchronous.rs
