[package]
name = "rotatory"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.async-std]
version = "1"
optional = true

[dependencies.tokio]
version = "1"
default-features = false
features = ["time"]
optional = true

[features]
default = []
async = []
sync = []
async_tokio = ["async", "dep:tokio"]
async_std = ["async", "dep:async-std"]
