[package]
name = "rotatory"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]

[dependencies.async-std]
version = "1"
optional = true

[dependencies.cfg-if]
version = "1"
optional = true

[dependencies.tokio]
version = "1"
default-features = false
features = ["time"]
optional = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
#tokio-test = "0.4"

[features]
default = []
async = ["dep:cfg-if"]
sync = []
async_tokio = ["async", "dep:tokio"]
async_std = ["async", "dep:async-std"]
